# Jasper

./: .gitignore  README.md  chunking_utils.py  docker-compose.hatchet.yml  docker-compose.weaviate.yml  docker-compose.worker.yml  docker-compose.yml  html_to_vectordb_pipeline.py  requirements.txt
.github/workflows/: python-app.yml
backend/: .example.env  backend_notes.md  dockerfile  pyproject.toml  requirements.txt
backend/chat_microservice/: __init__.py  auth.py  chat.py  db.py  llm.py  notes.md  schema.sql
backend/hatchet/: hatchet-worker-requirements.txt  hatchet.py  hatchet_notes.md  main.py  workflow.py
backend/hatchet_worker/: hatchet.py  main.py  notes.md  workflow.py
backend/instance/: config.py
backend/tests/: conftest.py  data.sql  test_auth.py  test_chat.py  test_db.py  test_factory.py  test_llm.py
crawl_jax_docs/: scrapy.cfg
crawl_jax_docs/crawl_jax_docs/: items.py  middlewares.py  pipelines.py  settings.py
crawl_jax_docs/crawl_jax_docs/spiders/: articles_spider.py
frontend/: dockerfile  frontend_notes.md  notes.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/components/: header.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/api/chat-submit/: +server.ts
frontend/src/routes/conversations/: +page.server.ts  +page.svelte
frontend/src/routes/conversations/[convId]/: +page.server.ts  (+1 more)
hatchet_worker/: .env.worker.example  Dockerfile  hatchet_notes.md  notes.md
hatchet_worker/src/: hatchet.py  main.py  workflow.py
